--- a/LeGourmand.html
+++ b/LeGourmand.html
@@ -18,28 +18,54 @@
     <h2><b>Le Gourmand</b></h2>
 
     <h3 style="text-align: left;">ENTREES</h3>
+    <div class="menuBox">
+        <div class="menuItem"><b>Tuna Carpaccio</b>Seazoned with yuzu</div>
+    </div>
+    
+    &nbsp;
+    <div class="menuBox">
+        <div class="menuItem"><b>Crunchy Lobster Croquets</b> With seasonal vegetables</div>
+    </div>
+   
+    &nbsp;
+    <div class="menuBox">
+        <div class="menuItem"><b>Mushrooms soups</b>With truffles</div>
+    </div>
 
-    <div class="menuItem"><b>Tuna Carpaccio</b>Seazoned with yuzu</div>
-    &nbsp;
-    <div class="menuItem"><b>Crunchy Lobster Croquets</b> With seasonal vegetables</div>
-    &nbsp;
-    <div class="menuItem"><b>Mushrooms soups</b>With truffles</div>
     &nbsp;
     <h3 style="text-align: left;">MAIN DISH</h3>
     &nbsp;
-    <div class="menuItem"><b>Roast Chicken With Provincal Herbs</b> With truffle cream</div>
+    <div class="menuBox">
+        <div class="menuItem"><b>Roast Chicken With Provincal Herbs</b> With truffle cream</div>
+    </div>
+    
     &nbsp;
-    <div class="menuItem"><b>Roasted lobster</b>With seasonal vegetables</div>
+    <div class="menuBox">
+        <div class="menuItem"><b>Roasted lobster</b>With seasonal vegetables</div>
+    </div>
+
     &nbsp;
-    <div class="menuItem"><b>Angust Beef Ribs</b>With mashed parshnips</div>
+    <div class="menuBox">
+        <div class="menuItem"><b>Angust Beef Ribs</b>With mashed parshnips</div>
+    </div>
+   
     &nbsp;
     <h3 style="text-align: left;">DESSERTS</h3>
     &nbsp;
-    <div class="menuItem"><b>Assorted Desert Plate</b>Chef's choice</div>
+    <div class="menuBox">
+        <div class="menuItem"><b>Assorted Desert Plate</b>Chef's choice</div>
+    </div>
+   
     &nbsp;
-    <div class="menuItem"><b>Crème brulée</b>Revisited</div>
+    <div class="menuBox">
+        <div class="menuItem"><b>Crème brulée</b>Revisited</div>
+    </div>
+
     &nbsp;
-    <div class="menuItem"><b>Tiramisu</b>With hazelnuts</div>
+    <div class="menuBox">
+        <div class="menuItem"><b>Tiramisu</b>With hazelnuts</div>
+    </div>
+
     &nbsp;
     <div>
         <button class="orderButton">Order</button>
