updated some animations

--- a/Bastille.html
+++ b/Bastille.html
@@ -8,7 +8,7 @@
 <a href="Index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo"></a>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/styles.css">
-<div class="theEnchantedPlateContent">
+<div class="restaurantContent">
 <body>
 
     <div><img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="laPaletteImage"></div>
