--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <div class="restaurantsText"> <h2>Restaurants</h2> </div>
     &nbsp;
     
-<a class="linkToRestaurant"  href="TheFullPalette.html">
+<a class="linkToRestaurant"  href="theFullPalette.html">
     <div class="restaurantBox">
         <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurantImage" alt="restaurantImage">
         <h3 class="restaurantDetails">The Full Pallette</h3><h3 class="restaurantLocation">New York</h3>
@@ -55,7 +55,7 @@
    
 &nbsp;
 
-<a class="linkToRestaurant"  href="TheEnchantedPlate.html"> 
+<a class="linkToRestaurant"  href="theEnchantedPlate.html"> 
     <div class="restaurantBox">
          <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurantImage" alt="restaurantImage">
          <h3 class="restaurantDetails">The Enchanted Plate</h3><h3 class="restaurantLocation">New York</h3>
@@ -66,7 +66,7 @@
 
  &nbsp; 
 
-<a class="linkToRestaurant" href="Bastille.html">
+<a class="linkToRestaurant" href="bastille.html">
     <div class="restaurantBox">
         <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurantImage" alt="restaurantImage">
         <h3 class="restaurantDetails">Bastille</h3><h3 class="restaurantLocation">New York</h3>
@@ -77,7 +77,7 @@
 
 
 &nbsp;
-<a class="linkToRestaurant"  href="LeGourmand.html">
+<a class="linkToRestaurant"  href="leGourmand.html">
     <div class="restaurantBox">
     <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurantImage" alt="restaurantImage">
     <h3 class="restaurantDetails">Le Gourmand</h3><h3 class="restaurantLocation">New York</h3>
