--- a/bastille.html
+++ b/bastille.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <a href="Index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo" alt="myFoodLogo"></a>
+    <a href="index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo" alt="myFoodLogo"></a>
 <div class="restaurantContent">
 
 
