--- a/leGourmand.html
+++ b/leGourmand.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="Index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo" alt="myFoodLogo"></a>
+    <a href="index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo" alt="myFoodLogo"></a>
 <div class="restaurantContent">
 
     <div><img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="individualRestaurantImage" alt="leGourmandImage"></div>
