--- a/theEnchantedPlate.html
+++ b/theEnchantedPlate.html
@@ -11,7 +11,7 @@
 
 
 <body>
-    <a href="Index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo" alt="myFoodLogo"></a>
+    <a href="index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo" alt="myFoodLogo"></a>
     <div class="restaurantContent">
 
     <div><img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" class="individualRestaurantImage" alt="enchantedPlateImage"></div>
