--- a/theFullPalette.html
+++ b/theFullPalette.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <a href="Index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo" alt="myFoodLogo"></a>
+    <a href="index.html"><img src="images/ohmyfood.jpg" height="40" width="230" class="ohmyfoodLogo" alt="myFoodLogo"></a>
     <div class="restaurantContent">
 
     <div><img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="individualRestaurantImage" alt="fullPaletteImage"></div>
