updated drop shadows, gradients, prices

--- a/bastille.html
+++ b/bastille.html
@@ -24,7 +24,7 @@
     <div class="heartIconMenu"> <img src="images/nobackgroundheart.png" alt="addToFavorites" onmouseover="this.src='images/output-onlinegiftools.gif';" onmouseout="this.src='images/nobackgroundheart.png';"></div>
 </div>
     
-
+<i class="fa-thin fa-circle-check"></i>
     <h3 class="menuCategory">ENTREES</h3>
     <div class="greenHorizontalLine"></div>
 <div class="menuItemBox">
