Reworked checkmark animation and some dropshadows

--- a/leGourmand.html
+++ b/leGourmand.html
@@ -28,20 +28,26 @@
     <h3 class="menuCategory">ENTREES</h3>
     <div class="greenHorizontalLine"></div>
     <div class="menuItemBox">
-        <div class="menuItem"><b>Tuna Carpaccio</b>Seazoned with yuzu</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Tuna Carpaccio</b><br>Seazoned with yuzu</div>
+        <div class="priceTag">25€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
     
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Crunchy Lobster Croquets</b> With seasonal vegetables</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Crunchy Lobster Croquets</b><br> With seasonal vegetables</div>
+        <div class="priceTag">35€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
    
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Mushrooms soups</b>With truffles</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Mushrooms soups</b><br>With truffles</div>
+        <div class="priceTag">20€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
 
     &nbsp;
@@ -49,20 +55,26 @@
     <div class="greenHorizontalLine"></div>
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Roast Chicken With Provincal Herbs</b> With truffle cream</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Roast Chicken With Provincal Herbs</b><br> With truffle cream</div>
+        <div class="priceTag">40€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
     
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Roasted lobster</b>With seasonal vegetables</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Roasted lobster</b><br>With seasonal vegetables</div>
+        <div class="priceTag">35€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
 
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Angust Beef Ribs</b>With mashed parshnips</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Angust Beef Ribs</b><br>With mashed parshnips</div>
+        <div class="priceTag">44€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
    
     &nbsp;
@@ -70,20 +82,26 @@
     <div class="greenHorizontalLine"></div>
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Assorted Desert Plate</b>Chef's choice</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Assorted Desert Plate</b><br>Chef's choice</div>
+        <div class="priceTag">18€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
    
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Crème brulée</b>Revisited</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Crème brulée</b><br>Revisited</div>
+        <div class="priceTag">22€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
 
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Tiramisu</b>With hazelnuts</div>
-        <div class="checkmark"><img class="addToOrderFavicon" src="images/favicon-32x32.png" alt="addToOrder">    </div>
+        <div class="menuItem"><b>Tiramisu</b><br>With hazelnuts</div>
+        <div class="priceTag">23€</div>
+        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
     </div>
 
     &nbsp;
