last minute changes

--- a/leGourmand.html
+++ b/leGourmand.html
@@ -28,7 +28,7 @@
     <h3 class="menuCategory">ENTREES</h3>
     <div class="greenHorizontalLine"></div>
     <div class="menuItemBox">
-        <div class="menuItem"><b>Tuna Carpaccio</b><br>Seazoned with yuzu</div>
+        <div class="menuItem"><p><b>Tuna Carpaccio</b><br>Seazoned with yuzu</p></div>
         <div class="priceTag">25€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
@@ -36,7 +36,7 @@
     
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Crunchy Lobster Croquets</b><br> With seasonal vegetables</div>
+        <div class="menuItem"><p><b>Crunchy Lobster Croquets</b><br> With seasonal vegetables</p></div>
         <div class="priceTag">35€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
@@ -44,7 +44,7 @@
    
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Mushrooms soups</b><br>With truffles</div>
+        <div class="menuItem"><p><b>Mushrooms soups</b><br>With truffles</p></div>
         <div class="priceTag">20€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
@@ -55,7 +55,7 @@
     <div class="greenHorizontalLine"></div>
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Roast Chicken With Provincal Herbs</b><br> With truffle cream</div>
+        <div class="menuItem"><p><b>Roast Chicken With Provincal Herbs</b><br> With truffle cream</p></div>
         <div class="priceTag">40€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
@@ -63,7 +63,7 @@
     
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Roasted lobster</b><br>With seasonal vegetables</div>
+        <div class="menuItem"><p><b>Roasted lobster</b><br>With seasonal vegetables</p></div>
         <div class="priceTag">35€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
@@ -71,7 +71,7 @@
 
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Angust Beef Ribs</b><br>With mashed parshnips</div>
+        <div class="menuItem"><p><b>Angust Beef Ribs</b><br>With mashed parshnips</p></div>
         <div class="priceTag">44€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
@@ -82,7 +82,7 @@
     <div class="greenHorizontalLine"></div>
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Assorted Desert Plate</b><br>Chef's choice</div>
+        <div class="menuItem"><p><b>Assorted Desert Plate</b><br>Chef's choice</p></div>
         <div class="priceTag">18€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
@@ -90,7 +90,7 @@
    
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Crème brulée</b><br>Revisited</div>
+        <div class="menuItem"><p><b>Crème brulée</b><br>Revisited</p></div>
         <div class="priceTag">22€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
@@ -98,7 +98,7 @@
 
     &nbsp;
     <div class="menuItemBox">
-        <div class="menuItem"><b>Tiramisu</b><br>With hazelnuts</div>
+        <div class="menuItem"><p><b>Tiramisu</b><br>With hazelnuts</p></div>
         <div class="priceTag">23€</div>
         <div class="checkmark"><img class="checkmarkBackground" src="images/Untitled design.jpg" alt="addToOrder"> 
             <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon">    </div>
