Reworked checkmark animation

--- a/leGourmand.html
+++ b/leGourmand.html
@@ -30,24 +30,24 @@
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Tuna Carpaccio</b><br>Seazoned with yuzu</p></div>
         <div class="priceTag">25€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark"> </div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">   
     </div>
     
     &nbsp;
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Crunchy Lobster Croquets</b><br> With seasonal vegetables</p></div>
         <div class="priceTag">35€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark"> </div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">   
     </div>
    
     &nbsp;
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Mushrooms soups</b><br>With truffles</p></div>
         <div class="priceTag">20€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark"> </div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">   
     </div>
 
     &nbsp;
@@ -57,24 +57,24 @@
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Roast Chicken With Provincal Herbs</b><br> With truffle cream</p></div>
         <div class="priceTag">40€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark"> </div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">   
     </div>
     
     &nbsp;
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Roasted lobster</b><br>With seasonal vegetables</p></div>
         <div class="priceTag">35€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark"> </div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">   
     </div>
 
     &nbsp;
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Angust Beef Ribs</b><br>With mashed parshnips</p></div>
         <div class="priceTag">44€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark">  </div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">  
     </div>
    
     &nbsp;
@@ -84,24 +84,24 @@
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Assorted Desert Plate</b><br>Chef's choice</p></div>
         <div class="priceTag">18€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark"> </div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">   
     </div>
    
     &nbsp;
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Crème brulée</b><br>Revisited</p></div>
         <div class="priceTag">22€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark"></div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    
     </div>
 
     &nbsp;
     <div class="menuItemBox">
         <div class="menuItem"><p><b>Tiramisu</b><br>With hazelnuts</p></div>
         <div class="priceTag">23€</div>
-        <div class="checkmark"><img class="checkmarkBackground" src="images/Untitleddesign.jpg" alt="addToOrder"> 
-            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    </div>
+        <div class="checkmark"></div>
+            <img src="images/circle-check-regular-1.jpg" class="checkmarkIcon" alt="checkmark">    
     </div>
 
     &nbsp;
